<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/hudLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/PlayerCountBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/Player1Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Player1Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Player 1"
                    android:textColor="#FFc12a43"
                    android:textSize="15dp" />

                <LinearLayout
                    android:id="@+id/Player1StatsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/P1VP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="VP: 0"
                        android:textColor="#FFc12a43"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/P1KnightCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Knights: 0"
                        android:textColor="#FFc12a43"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/P1RoadCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Roads: 0"
                        android:textColor="#FFc12a43"
                        android:textSize="15dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Player2Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Player2Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Player 2"
                    android:textColor="#FF2a3ec1"
                    android:textSize="15dp" />

                <LinearLayout
                    android:id="@+id/Player2StatsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/P2VP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="VP: 0"
                        android:textColor="#FF2a3ec1"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/P2KnightCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Knights: 0"
                        android:textColor="#FF2a3ec1"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/P2RoadCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Roads: 0"
                        android:textColor="#FF2a3ec1"
                        android:textSize="15dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Player3Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Player3Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Player 3"
                    android:textColor="#FFc17b2a"
                    android:textSize="15dp" />

                <LinearLayout
                    android:id="@+id/Player3StatsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/P3VP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="VP: 0"
                        android:textColor="#FFc17b2a"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/P3KnightCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Knights: 0"
                        android:textColor="#FFc17b2a"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/P3RoadCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Roads: 0"
                        android:textColor="#FFc17b2a"
                        android:textSize="15dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Player4Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Player4Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Player 4"
                    android:textColor="#FF346134"
                    android:textSize="15dp" />

                <LinearLayout
                    android:id="@+id/Player4StatsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/P4VP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="VP: 0"
                        android:textColor="#FF346134"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/P4KnightCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Knights: 0"
                        android:textColor="#FF346134"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/P4RoadCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Roads: 0"
                        android:textColor="#FF346134"
                        android:textSize="15dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.example.settlersofcatan.CatanBoardView
            android:id="@+id/boardView"
            android:layout_width="match_parent"
            android:layout_height="420dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/controlLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/tradeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#3B0459"
                android:text="@string/tradeTitle"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/rollButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#045906"
                android:text="@string/roll"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/endButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#870404"
                android:text="@string/end"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/updateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/diceLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="5sp"
                    android:paddingEnd="5sp">

                    <TextView
                        android:id="@+id/diceTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/diceTitle"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/die1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/face1" />

                    <ImageView
                        android:id="@+id/die2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:srcCompat="@mipmap/face6" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/resourceLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ResourceTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resTitle"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/oreButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button" />

                    <Button
                        android:id="@+id/wheatButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button" />

                    <Button
                        android:id="@+id/sheepButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button" />

                    <Button
                        android:id="@+id/woodButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button" />

                    <Button
                        android:id="@+id/brickButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/devCardLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/devCardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dcTitle"
                android:textColor="#000000"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/devCardSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/stateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buildLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="5sp"
            android:paddingEnd="0sp">

            <Button
                android:id="@+id/roadButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:textColor="#FFFFFF"
                android:text="@string/roadName" />

            <Button
                android:id="@+id/settlementButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#372D70"
                android:textColor="#FFFFFF"
                android:text="@string/settlementName" />

            <Button
                android:id="@+id/cityButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#B82D49"
                android:textColor="#FFFFFF"
                android:text="@string/cityName" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>